--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,63 @@ header, nav {
     border-radius: 8px;
 }
 
+.auth-btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 20px;
+    border: 2px solid #0033cc;
+    border-radius: 25px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.3s ease;
+}
+
+.auth-btn:hover {
+    background-color: #0033cc;
+    color: white;
+    border: none;
+    transform: translateY(-2px);
+}
+
+.login-btn {
+    background: transparent;
+}
+
+.signup-btn {
+    background: #0033cc;
+    color: white;
+}
+
+.signup-btn:hover {
+    background: #002299;
+    border-color: #002299;
+}
+
+.logout-btn {
+    background: #3b6cff;
+    color: white;
+    border-color: #386dff;
+}
+
+.logout-btn:hover {
+    background: #3828c6;
+    border-color: #96b4ff;
+}
+
+.user-auth-section {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.welcome-text {
+    color: #333;
+    font-weight: 500;
+}
+
+
 .nav-center a:hover {
     color: #0033cc;
     background-color: rgba(0, 51, 204, 0.1);
@@ -240,15 +297,16 @@ main {
 }
 
 .btn-primary {
-    background: #ff6b6b;
+    background: #505ae7;
     color: white;
-    box-shadow: 0 5px 20px rgba(255, 107, 107, 0.4);
+    border:#0011ff ;
+    box-shadow: 0 5px 20px rgba(143, 160, 233, 0.4);
 }
 
 .btn-primary:hover {
-    background: #ff5252;
+    background: #5297ff;
     transform: translateY(-3px);
-    box-shadow: 0 8px 25px rgba(255, 107, 107, 0.6);
+    box-shadow: 0 8px 25px rgba(161, 232, 254, 0.6);
 }
 
 .btn-secondary {
