--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ nav {
 .logo span {
     font-family: 'Pacifico', cursive;
     color: #0523cc;
-    font-size: 26px;
+    font-size:30px;
     font-weight: 400;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
@@ -129,9 +129,9 @@ header, nav {
 }
 
 .logout-btn {
-    background: #3b6cff;
+    background: #4775ff;
     color: white;
-    border-color: #386dff;
+    border-color: #aac0ff;
 }
 
 .logout-btn:hover {
